--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,11 @@
 <html xmlns:th="http://thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
 
-    <!--Let browser know website is optimized for mobile-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EvendoApp</title>
 </head>
@@ -16,7 +14,7 @@
 
     <h1>Lista de Eventos</h1>
     <h3><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Evento</a></h3>
-    <table>
+    <table class="container">
         <thead>
             <tr>
                 <th>Nome</th>
@@ -37,6 +35,7 @@
         </tbody>
 
     </table>
+    <script type="text/javascript" src = "https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 </html>
