--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -7,13 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="style/styleCSS.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EvendoApp</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">Eventos</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista Evento</a></li>
 
-<h1>Evento</h1>
-    <h3><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista Evento</a></h3>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div th:each="evento : ${evento}" class="container detalhesEvento">
         <h5>Detalhes do Evento</h5>
         <div class="row">
@@ -23,25 +32,32 @@
             <p>Horario: <span th:text="${evento.horario}"></span></p>
         </div>
         <th:block th:include="mensagemValidacao"></th:block>
-        <form method="post">
+    </div>
+    <div class="container">
+        <form  class="formConvidado" method="post">
             Nome:<input type="text" value="" name="nomeConvidado">
             Rg:<input type="text" value="" name="rg">
             <button class="waves-effect waves-light btn" type="submit">Adicionar</button>
 
         </form>
     </div>
-    <h5>Lista de Convidados</h5>
-    <div class="container" th:each="convidado : ${convidados}">
 
-        <div class="row">
-            <div class="input-field col s6">
-                <p><span th:text="${convidado.nomeConvidado}"></span></p>
-            </div>
-            <div class="input-field col s3">
-                <p><span th:text="${convidado.rg}"></span></p>
-            </div>
-        </div>
-    </div>
+
+    <h5>Lista de Convidados</h5>
+    <table class="container tabelaConvidado">
+        <thead>
+        <tr>
+            <th>Nome Convidado</th>
+            <th>RG</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="convidado : ${convidados}">
+            <td><span th:text="${convidado.nomeConvidado}"></span></td>
+            <td><span th:text="${convidado.rg}"></span></td>
+        </tr>
+        </tbody>
+    </table>
 
 <script type="text/javascript" src = "https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
