--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -5,14 +5,24 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="style/styleCSS.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EventoApp</title>
 </head>
 <body>
-    <h1>Cadastro de Eventos</h1>
-    <h3><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista de Eventos</a></h3>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">Cadastro de Eventos</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista de Eventos</a></li>
+
+                </ul>
+            </div>
+        </nav>
+    </header>
     <th:block th:include="mensagemValidacao"></th:block>
-    <form class="container" method="post">
+    <form class="container formEvento" method="post">
 
         Nome:<input type="text" value="" name="nome"/>
         <div class="row">
@@ -23,7 +33,7 @@
                 Data:<input type="date" value="" name="data"/>
             </div>
             <div class="input-field col s3">
-                Horario:<input type="text" value="" name="horario"/>
+                Horario:<input type="time" value="" name="horario"/>
             </div>
         </div>
         <button class="waves-effect waves-light btn" type="submit">Salvar</button>
