--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -50,6 +50,7 @@
             <th>Nome Convidado</th>
             <th>RG</th>
             <th>Deletar</th>
+            <th>Alterar</th>
         </tr>
         </thead>
         <tbody>
